feat: implementar funcionalidade de pesquisa de crédito com tratamento de erros

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="app-container">
   <app-header></app-header>
   <main class="main-content">
-    <app-search-filter></app-search-filter>
+    <app-search-filter (pesquisar)="onPesquisar($event)"></app-search-filter>
 
     <app-credito-table 
       [creditos]="creditos"
