--- a/frontend/src/app/components/search-filter/search-filter.component.html
+++ b/frontend/src/app/components/search-filter/search-filter.component.html
@@ -13,7 +13,7 @@
             Número NFS-e
           </mat-button-toggle>
           <mat-button-toggle value="CREDITO">
-            <mat-icon>credit_card</mat-icon>
+            <mat-icon>paid</mat-icon>
             Número do Crédito
           </mat-button-toggle>
         </mat-button-toggle-group>
